# near-treasury-bulk-payment-contract

./: .gitignore  Cargo.toml  README.md  SANDBOX_INVESTIGATION.md  SECURITY.md  test-payment-flow.sh  test-sandbox-working.sh  test-sandbox.sh
.devcontainer/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/workflows/: build-wasm.yml  copilot-setup-steps.yml  e2e-test.yml  test.yml
bulk-payment-api/: Cargo.toml  Dockerfile  README.md  fly.toml
bulk-payment-api/src/: contract.rs  main.rs  routes.rs  worker.rs
docs/: ARCHITECTURE.md
e2e-tests/: README.md  dao-bulk-payment-flow.js  fungible-token-large-batch.js  fungible-token-non-registered-flow.js  near-intents-non-registered-flow.js  package-lock.json  package.json
sandbox/: Dockerfile  README.md  fly.toml  init-sandbox.sh  start-sandbox.sh  supervisord.conf
sandbox/contracts/: .gitkeep
sandbox/sandbox-init/: Cargo.toml
sandbox/sandbox-init/src/: main.rs
src/: lib.rs
tests/: README.md  TEST_BULK_BTC_INTENTS_PAYMENT.md  integration_tests.rs
