[package]
name = "near-treasury-bulk-payment-contract"
description = "NEAR smart contract for bulk payment processing - Part of NEAR Treasury"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/petersalomonsen/near-treasury-bulk-payment-contract"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.16.2-rust-1.86.0"
image_digest = "sha256:74c24d4d912f893198b8b13e01d43e0f78f3b00b3df45bf555a707eb4918a54e"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
near-sdk = "5.16"

[dev-dependencies]
near-sdk = { version = "5.16", features = ["unit-testing"] }
near-sandbox = "0.2.0"
near-api = "0.7.7"
near-crypto = "0.31"
cargo-near-build = "0.8.0"
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
