[package]
name = "bulk-payment-api"
description = "REST API for NEAR Treasury Bulk Payment Contract"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bulk-payment-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# NEAR SDK
near-api = "0.7.8"
near-crypto = "0.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"
base64 = "0.22.1"

# Crypto
sha2 = "0.10"
hex = "0.4"

# HTTP client for RPC calls
reqwest = { version = "0.11", features = ["json"] }
